--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: Anass Skalli
+logo: /assets/img/headshot_circle.png
+#description: Text below image
+show_downloads: false
+Theme: jekyll-Theme-minimal
