--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Anass Skalli
 logo: /assets/headshot_circle.png
 show_downloads: false
-theme: jekyll-theme-minima
+theme: jekyll-theme-minimal
